# asana-mcp-server

./: .gitignore  LICENSE  README.md  asana-mcp-server.onedir.spec  asana-mcp-server.spec  mcp-server-playbook.md  pyproject.toml  requirements.txt
docs/: DEV.md  README.md
docs/adrs/: 0001-fastmcp-httpx.md
scripts/: _tool_runner.py  asana_create_task.py  asana_create_task_in_section.py  asana_delete_task.py  asana_get_current_user.py  asana_get_task.py  asana_list_projects.py  asana_list_workspaces.py  asana_move_task_to_section.py  asana_search_tasks.py  asana_update_task.py  build_dist.sh  build_dist_onedir.sh  run_server.py
spec/: 001-server-baseline.md  002-auth-config.md  003-core-tools.md  007-cli-scripts.md  008-tests.md  009-task-sections.md  Roadmap.md
src/: asana_client.py  config.py  logging_utils.py  server.py  tool_impl.py  tools.py
tests/: test_config.py  test_redaction.py
