[project]
name = "asana-mcp"
version = "0.1.0"
description = "MCP server that provides Asana tools for tasks, projects, and workspace discovery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.18.0",
]
